--- a/stable_diffusion.ipynb
+++ b/stable_diffusion.ipynb
@@ -71,7 +71,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Вам нужно зарегистрироваться на сайте [Hugging Face Hub](https://huggingface.co/), и получить на нем токен доступа к модели, чтобы код заработал. После логина на сайте huggingface.co пройдите по ссылке: https://huggingface.co/settings/tokens, нажмите кнопку New token и затем Generate token. Скопируйте токен (сначала нажав SHOW, чтобы увидеть его, токен пригодится позже.\n",
+        "Вам нужно зарегистрироваться на сайте [Hugging Face Hub](https://huggingface.co/), и получить на нем токен доступа к модели, чтобы код заработал. После логина на сайте huggingface.co пройдите по ссылке: https://huggingface.co/settings/tokens, нажмите кнопку New token и затем Generate token. Скопируйте токен (сначала нажав SHOW, чтобы увидеть его, токен пригодится позже).\n",
         "\n",
         "Еще необходимо принять лицензию перед ее использованием. Залогинившись на сайте huggingface.co нужно посетить [карточку модели](https://huggingface.co/CompVis/stable-diffusion-v1-4), прочитать лицензию и поставить галочку. \n",
         "\n"
@@ -105,7 +105,7 @@
       "cell_type": "markdown",
       "source": [
         "А теперь запустите следующий код, в процессе его выполнения появится строка запроса, в которую нужно вставить токен, полученный ранее и нажать кнопку Login. В случае успеха появится надпись `Login successful\n",
-        "Your token has been saved to /root/.huggingface/token`. Красный текст ниже игнорируйте."
+        "Your token has been saved to /root/.huggingface/token`. Красный текст ниже игнорируйте. Если выпадет ошибка, перезапустите эту ячейку и вставьте корректный токен"
       ],
       "metadata": {
         "id": "BHiV7acka4EY"
