Remove my own huggingface.co token

--- a/stable_diff.ipynb
+++ b/stable_diff.ipynb
@@ -67,7 +67,7 @@
         "from diffusers import StableDiffusionPipeline\n",
         "\n",
         "# make sure you're logged in with `huggingface-cli login`\n",
-        "pipe = StableDiffusionPipeline.from_pretrained(\"CompVis/stable-diffusion-v1-4\", revision=\"fp16\", torch_dtype=torch.float16, use_auth_token=\"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\")  \n",
+        "pipe = StableDiffusionPipeline.from_pretrained(\"CompVis/stable-diffusion-v1-4\", revision=\"fp16\", torch_dtype=torch.float16, use_auth_token=\"Вставьте_здесь_свой_токен_полученый_на_https://huggingface.co/\")  \n",
         "pipe = pipe.to(\"cuda\")"
       ]
     },
